force-app/main/default/objects/Business_Hours_Setting__mdt/Business_Hours_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Business Hours Setting</label>
    <pluralLabel>Business Hours Settings</pluralLabel>
</CustomObject>