force-app/main/default/objects/Business_Hours_Setting__mdt/fields/Close_Time__c.field-meta.xml
<CustomField>
    <fullName>Close_Time__c</fullName>
    <label>Close Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>