force-app/main/default/objects/Business_Hours_Setting__mdt/fields/Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_Of_Week__c</fullName>
    <label>Day Of Week</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>