force-app/main/default/objects/Business_Hours_Setting__mdt/fields/Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Open_Time__c</fullName>
    <label>Open Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>