force-app/main/default/objects/Business_Hours_Setting__mdt/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>